added HTML to strucure calulator layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
     <title>Calculator</title>
 </head>
 <body>
+    <div class="wrapper flex">
+        <div class="calculator-container flex column">
+            <section class="calculator-screen flex column">
+                <div class="screen-top-row flex"></div>
+                <div class="screen-bottm-row flex"></div>
+            </section>
+            <section class="calculator-keys flex">
+                <div class="number-keys flex grid">
+                    <button class="flex functional-key">c</button>
+                    <button class="flex functional-key">&PlusMinus;</button>
+                    <button class="flex functional-key" data-numberkey="%">&percnt;</button>
+                    <button class="flex functional-key" data-numberkey="/">&divide;</button>
+                    <button class="flex" data-numberkey="1">1</button>
+                    <button class="flex" data-numberkey="2">2</button>
+                    <button class="flex" data-numberkey="3">3</button>
+                    <button class="flex" data-numberkey="x">&times;</button>
+                    <button class="flex" data-numberkey="4">4</button>
+                    <button class="flex" data-numberkey="5">5</button>
+                    <button class="flex" data-numberkey="6">6</button>
+                    <button class="flex" data-numberkey="-">&minus;</button>
+                    <button class="flex" data-numberkey="7">7</button>
+                    <button class="flex" data-numberkey="8">8</button>
+                    <button class="flex" data-numberkey="9">9</button>
+                    <button class="flex" data-numberkey="+">&plus;</button>
+                    <button class="flex" data-numberkey="0">0</button>
+                    <button class="flex" data-numberkey=".">.</button>
+                    <button class="flex" data-numberkey="<">&lt;</button>
+                    <button class="flex" data-numberkey="=">&equals;</button>
+                </div>
+    
+            </section>
+        </div>
+    </div>
 
 
     <script src="js/app.js"></script>
