--- a/index.html
+++ b/index.html
@@ -14,39 +14,47 @@
 <body>
     <div class="wrapper flex">
         <div class="calculator-container flex column">
-            <section class="calculator-screen flex column">
-                <div class="screen-top-row flex"></div>
-                <div class="screen-bottm-row flex"></div>
-            </section>
-            <section class="calculator-keys flex">
-                <div class="number-keys flex grid">
-                    <button class="flex functional-key">c</button>
-                    <button class="flex functional-key">&PlusMinus;</button>
-                    <button class="flex functional-key" data-numberkey="%">&percnt;</button>
-                    <button class="flex functional-key" data-numberkey="/">&divide;</button>
-                    <button class="flex" data-numberkey="1">1</button>
-                    <button class="flex" data-numberkey="2">2</button>
-                    <button class="flex" data-numberkey="3">3</button>
-                    <button class="flex" data-numberkey="x">&times;</button>
-                    <button class="flex" data-numberkey="4">4</button>
-                    <button class="flex" data-numberkey="5">5</button>
-                    <button class="flex" data-numberkey="6">6</button>
-                    <button class="flex" data-numberkey="-">&minus;</button>
-                    <button class="flex" data-numberkey="7">7</button>
-                    <button class="flex" data-numberkey="8">8</button>
-                    <button class="flex" data-numberkey="9">9</button>
-                    <button class="flex" data-numberkey="+">&plus;</button>
-                    <button class="flex" data-numberkey="0">0</button>
-                    <button class="flex" data-numberkey=".">.</button>
-                    <button class="flex" data-numberkey="<">&lt;</button>
-                    <button class="flex" data-numberkey="=">&equals;</button>
+            <header class="flex column">
+                <section class="history flex">
+                    <button class="flex history-btn"><span class="material-icons-outlined history-icon">history</span></button>
+                    
+                </section>
+                <section class="calculator-screen flex column">
+                    <div class="screen-top-row flex"></div>
+                    <div class="screen-bottom-row flex"></div>
+                </section>
+            </header>
+            <section class="calculator-keys">
+                <div class="number-keys grid">
+                    <button class="flex clear-key">C</button>
+                    <button class="flex operator-key" data-functionalkey="^" disabled>&Hat;</button>
+                    <button class="flex operator-key" data-functionalkey="%" disabled>&percnt;</button>
+                    <button class="flex operator-key" data-functionalkey="/" disabled>&divide;</button>
+                    <button class="flex number-key" data-numberkey="1">1</button>
+                    <button class="flex number-key" data-numberkey="2">2</button>
+                    <button class="flex number-key" data-numberkey="3">3</button>
+                    <button class="flex operator-key" data-functionalkey="x" disabled>&times;</button>
+                    <button class="flex number-key" data-numberkey="4">4</button>
+                    <button class="flex number-key" data-numberkey="5">5</button>
+                    <button class="flex number-key" data-numberkey="6">6</button>
+                    <button class="flex operator-key" data-functionalkey="-" disabled>&minus;</button>
+                    <button class="flex number-key" data-numberkey="7">7</button>
+                    <button class="flex number-key" data-numberkey="8">8</button>
+                    <button class="flex number-key" data-numberkey="9">9</button>
+                    <button class="flex operator-key" data-functionalkey="+" disabled>&plus;</button>
+                    <button class="flex number-key" data-numberkey="0">0</button>
+                    <button class="flex number-key" data-numberkey=".">.</button>
+                    <button class="flex backspace-key"><span class="material-icons-outlined">backspace</span></button>
+                    <button class="flex equals-key">&equals;</button>
                 </div>
-    
+
+            </section>
+            <section class="display-history-wrapper">
+                <div class="display-history"></div>
             </section>
         </div>
     </div>
 
-
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
