added functions to handle different operations

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <button class="flex number-key" data-numberkey="0">0</button>
                     <button class="flex number-key" data-numberkey=".">.</button>
                     <button class="flex backspace-key"><span class="material-icons-outlined">backspace</span></button>
-                    <button class="flex equals-key">&equals;</button>
+                    <button class="flex equals-key" data-equalskey="=">&equals;</button>
                 </div>
 
             </section>
