refacored code and added clear functionality

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </header>
             <section class="calculator-keys">
                 <div class="number-keys grid">
-                    <button class="flex clear-key">C</button>
+                    <button class="flex clear-key" data-clearkey="Delete">C</button>
                     <button class="flex operator-key" data-functionalkey="^" disabled>&Hat;</button>
                     <button class="flex operator-key" data-functionalkey="%" disabled>&percnt;</button>
                     <button class="flex operator-key" data-functionalkey="/" disabled>&divide;</button>
@@ -44,7 +44,7 @@
                     <button class="flex operator-key" data-functionalkey="+" disabled>&plus;</button>
                     <button class="flex number-key" data-numberkey="0">0</button>
                     <button class="flex number-key" data-numberkey=".">.</button>
-                    <button class="flex backspace-key"><span class="material-icons-outlined">backspace</span></button>
+                    <button class="flex backspace-key" data-backspace="Backspace"><span class="material-icons-outlined">backspace</span></button>
                     <button class="flex equals-key" data-equalskey="=">&equals;</button>
                 </div>
 
