added functionality that disables/activates operator keys

--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
             <section class="calculator-keys">
                 <div class="number-keys grid">
                     <button class="flex clear-key" data-clearkey="Delete">C</button>
-                    <button class="flex operator-key" data-functionalkey="^" >&Hat;</button>
-                    <button class="flex operator-key" data-functionalkey="%" >&percnt;</button>
-                    <button class="flex operator-key" data-functionalkey="/" >&divide;</button>
+                    <button class="flex operator-key" data-functionalkey="^" disabled>&Hat;</button>
+                    <button class="flex operator-key" data-functionalkey="%" disabled>&percnt;</button>
+                    <button class="flex operator-key" data-functionalkey="/" disabled>&divide;</button>
                     <button class="flex number-key" data-numberkey="1">1</button>
                     <button class="flex number-key" data-numberkey="2">2</button>
                     <button class="flex number-key" data-numberkey="3">3</button>
-                    <button class="flex operator-key" data-functionalkey="x" >&times;</button>
+                    <button class="flex operator-key" data-functionalkey="x" disabled>&times;</button>
                     <button class="flex number-key" data-numberkey="4">4</button>
                     <button class="flex number-key" data-numberkey="5">5</button>
                     <button class="flex number-key" data-numberkey="6">6</button>
-                    <button class="flex operator-key" data-functionalkey="-" >&minus;</button>
+                    <button class="flex operator-key" data-functionalkey="-" disabled>&minus;</button>
                     <button class="flex number-key" data-numberkey="7">7</button>
                     <button class="flex number-key" data-numberkey="8">8</button>
                     <button class="flex number-key" data-numberkey="9">9</button>
-                    <button class="flex operator-key" data-functionalkey="+" >&plus;</button>
+                    <button class="flex operator-key" data-functionalkey="+" disabled>&plus;</button>
                     <button class="flex number-key" data-numberkey="0">0</button>
                     <button class="flex number-key" data-numberkey=".">.</button>
                     <button class="flex backspace-key" data-backspace="Backspace"><span class="material-icons-outlined">backspace</span></button>
-                    <button class="flex equals-key" data-equalskey="=">&equals;</button>
+                    <button class="flex equals-key" data-equalskey="=" disabled>&equals;</button>
                 </div>
 
             </section>
