added functionality that pops a warnig dialogue and clears calcualtor screen if max screen length is exceeded

--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
                 <section class="history flex">
                     <button class="flex history-btn"><span class="material-icons-outlined history-icon">history</span></button>
                     
+                    
                 </section>
                 <section class="calculator-screen flex column">
+                    <div class="warning flex">
+                        <div class="warning-message flex column">
+                            <span>Maximum screen length exceeded!</span>
+                            <div class="btn flex">ok</div>
+                        </div>
+                    </div>
                     <div class="screen-top-row flex"></div>
                     <div class="screen-bottom-row flex"></div>
                 </section>
